src/test/deca/context/valid/variable/valid_variable_declaration_underscore.deca
// Description:
//    Valid declaration of a variable with "_"
//
// [Begin Result]
// 3.14
// [End Result]
//
// History:
//    Created on 10/01/2025.

{
    float _ = 3.14;
    print(_) ;

}
