src/test/deca/context/invalid/class/null_access_method.deca
// Description:
//    Test of a declaration variable of type void in a method
//    Test rule 3.17
//
// Result:
// [Begin Result]
//null_access_method.deca:14:12: Object is not a class. Rule 3.71.
// [End Result]
//
// History:
//    created on 12/01/2025

{
    println(null.a());
}
